--- a/src/App.css
+++ b/src/App.css
@@ -1,58 +1,59 @@
-@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@500&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Oswald:wght@500&display=swap");
 
 .App {
   text-align: center;
-  box-sizing:border-box;
-  margin:0;
-  font-family: 'Oswald', sans-serif;
-  display:flex;
-  background-color:rgb(63, 63, 63);
-  height:100vh;
+  box-sizing: border-box;
+  margin: 0;
+  font-family: "Oswald", sans-serif;
+  display: flex;
+  background-color: rgb(63, 63, 63);
+  height: 100vh;
 }
 
 .container {
-  background-color:white;
-  border-radius:20px;
-  margin:2rem;
-  width:100vw;
+  background-color: white;
+  border-radius: 20px;
+  margin: 2rem;
+  width: 100vw;
 }
 
 h1 {
-  padding-top:30vh;
+  padding-top: 30vh;
   font-size: 6rem;
-  margin:0;
+  margin: 0;
   text-transform: uppercase;
   color: rgb(63, 63, 63);
 }
 
 h3 {
-  text-align:left;
-  font-family: 'helvetica', 'sans-serif';
-  font-weight:lighter;
+  text-align: left;
+  font-family: "helvetica", "sans-serif";
+  font-weight: 500;
   color: rgb(63, 63, 63);
 }
 
 .main {
-  height:80vh;
-  margin:auto;
-}
-
-button {
-  background-color:red;
-  border:none;
-  padding:.5rem 1rem .5rem 1rem;
-  border-radius:10px;
-  color:white;
-  font-family: 'helvetica', sans-serif;
+  height: 80vh;
+  margin: auto;
 }
 
 .header-footer {
-  display:flex;
+  display: flex;
   padding: 0 1rem 0 1rem;
-  justify-content:space-between;
+  justify-content: space-between;
 }
 
 .instructions {
-  text-align:center;
+  text-align: center;
+  font-weight: 500;
+}
+
+button {
+  background-color: red;
+  border: none;
+  padding: 0.5rem 1rem 0.5rem 1rem;
+  border-radius: 10px;
+  color: white;
   font-weight:500;
+  font-family: "helvetica", sans-serif;
 }
