--- a/src/App.css
+++ b/src/App.css
@@ -18,7 +18,7 @@
 }
 
 h1 {
-  padding-top: 30vh;
+  padding-top: 20vh;
   font-size: 6rem;
   margin: 0;
   text-transform: uppercase;
@@ -35,6 +35,7 @@ h3 {
 .main {
   height: 80vh;
   margin: auto;
+  
 }
 
 .header-footer {
@@ -51,25 +52,27 @@ h3 {
 button {
   background-color: red;
   border: none;
-  padding: 0.5rem 1rem 0.5rem 1rem;
+  padding: 0.5rem;
   border-radius: 10px;
   color: white;
-  font-weight:500;
+  font-weight: 500;
   font-family: "helvetica", sans-serif;
 }
 
-@media only screen 
-  and (min-device-width: 320px) 
-  and (max-device-width: 480px)
-  and (-webkit-min-device-pixel-ratio: 2) {
-    h3 {
-      font-size:1rem;
-    }
+h4 {
+  margin:0;
+  padding:5px;
+}
 
-    h1 {
-      font-size:3rem;
-    }
-    .main {
-      height: 73vh;
-    }
+@media only screen and (min-device-width: 320px) and (max-device-width: 480px) and (-webkit-min-device-pixel-ratio: 2) {
+  h3 {
+    font-size: .75rem;
+  }
+
+  h1 {
+    font-size: 3rem;
+  }
+  .main {
+    height: 70vh;
+  }
 }
