--- a/src/App.css
+++ b/src/App.css
@@ -18,7 +18,6 @@
 }
 
 h1 {
-  padding-top: 20vh;
   font-size: 6rem;
   margin: 0;
   text-transform: uppercase;
@@ -32,31 +31,28 @@ h3 {
   color: rgb(63, 63, 63);
 }
 
+.loading {
+  text-align: center;
+}
+
 .main {
-  display:flex;
-  height: 80vh;
-  align-items:center;
-  justify-content:center;
-  
+  display: flex;
+  height: 85%;
+  align-items: center;
+  justify-content: center;
 }
 
 .name {
-
+  margin: auto;
 }
 
 .image {
-
 }
 
 .header-footer {
   display: flex;
   padding: 0 1rem 0 1rem;
   justify-content: space-between;
-}
-
-.instructions {
-  text-align: center;
-  font-weight: 500;
 }
 
 button {
@@ -70,13 +66,13 @@ button {
 }
 
 h4 {
-  margin:0;
-  padding:5px;
+  margin: 0;
+  padding: 5px;
 }
 
 @media only screen and (min-device-width: 320px) and (max-device-width: 480px) and (-webkit-min-device-pixel-ratio: 2) {
   h3 {
-    font-size: .75rem;
+    font-size: 0.75rem;
   }
 
   h1 {
